--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "date-fns": "^2.0.0-beta.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-hot-toast": "^2.3.0",
